--- a/faker-http/package.json
+++ b/faker-http/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "faker",
+  "name": "faker-http",
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node faker-http.js"
   },
   "dependencies": {
     "faker": "^4.1.0",
